Fixed: Center aligning in events

--- a/client/src/components/Event1/Events1.css
+++ b/client/src/components/Event1/Events1.css
@@ -15,6 +15,7 @@
 }
 
 .eventOneRegister{
+	margin: 0 auto;
 	cursor: pointer;
 	font-family: 'Lato', sans-serif;
 	border:2px solid #B1FF64;
@@ -22,7 +23,6 @@
 	width:200px;
 	text-align:center;
 	margin-top: 30px;
-	margin-left: 620px;
 	color: #B1FF64;
 	line-height:30px;	
 }
@@ -30,7 +30,8 @@
 .eventOneBasket{
 	display:inline-flex;
 	margin-top:20px;
-	margin-left:625px;
+	margin-left: 43.5%;
+	width: 190px;
 }
 
 .eventOne0{
@@ -56,23 +57,10 @@
 	margin-left:50px;
 }
 
-.eventName{
-	height: auto;
-	font-size: 30px;
-	margin-left: 50px;
-	margin-top: 20px;
-}
-
-.speakerAndShit{
-	margin-top: 40px;
-	margin-left: 50px;
-	font-style: italic;
-}
-
 .eventDetailContent{
 	font-family: 'Lato', sans-serif;
 	font-size:20px;
-	margin-left:230px;
+	margin: 0 auto;
 	width:70%;
 	margin-top:30px;
 	text-align:center;
@@ -80,4 +68,7 @@
 
 .cursor{
 	cursor:pointer;
+}
+
+.statedThings{
 }
