--- a/client/src/components/EventsList/EventsList.css
+++ b/client/src/components/EventsList/EventsList.css
@@ -6,11 +6,11 @@
 
 .eventsGrid{
 	width: 100%;
-	height: 820px;
+	height: 1000px;
 }
 
 .techEventBlock{
-	margin-left: 50px;
+	margin-left: 20px;
 	width: 200px;
 	height: 200px;
 	background: black;
@@ -19,7 +19,7 @@
 	text-align: center;
 	font-family: Yataghan-Regular;
 	line-height: 200px;
-	transition: width 0.5s, height 0.5s, margin-left 0.5s, background 0.5s, line-height 0.5s,color 0.5s;
+	transition: width 0.3s, height 0.3s, margin-left 0.3s, background 0.3s, line-height 0.3s,color 0.3s;
 }
 
 .techEventBlock:hover{
@@ -32,7 +32,8 @@
 }
 
 .blocks{
+	width: 50%;
 	margin-top: 20px;
 	display: inline-flex;
-	margin-left:18%;
+	margin-left: 26%;
 }
