--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -35,7 +35,7 @@ footer {
   	background-color:#9d6dcd;
 }
 .ul2{
-	margin-left: 330px;
+	margin-left: 45%;
 	height: 100%;
 }
 i{
